<resources>
    <string name="app_name">Cookish</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="Review">
        <item>5.0</item>
        <item>4.0</item>
        <item>3.0</item>
        <item>2.0</item>
        <item>1.0</item>
    </string-array>
    <string-array name="Categories">
        <item>Other</item>
        <item>Pizza</item>
        <item>Dessert</item>
        <item>Breakfast</item>
        <item>Dinner</item>
        <item>Pancake</item>
        <item>Soup</item>
        <item>Sandwiches</item>
        <item>Pasta</item>
        <item>Western</item>
        <item>Rice</item>
    </string-array>

    <string name="back">back</string>
    <string name="sendMyPass">Send my password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="clear">clear</string>
    <string name="staffL">Staff Login</string>
    <string name="login">Login</string>
    <string name="forget">Forget Password</string>
    <string name="name">Name</string>
    <string name="Password">Password</string>
    <string name="cPassword">Confirmed-Password</string>
    <string name="titlePasswordRecovery">Password Recovery</string>
</resources>
